Bug 362988 - sftp connection win dolphin hangs/stops working after few seconds
Summary: sftp connection win dolphin hangs/stops working after few seconds
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: SFTP (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Andreas Schneider
URL:
Keywords:
: 366638 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-12 16:01 UTC by Matt
Modified: 2019-02-20 10:55 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt 2016-05-12 16:01:51 UTC
What works: I can connect to my webhoster/homepage via sftp://myhomepage.com
What does not work: after some time (approx 10s) no browsing possible, keeps showing loading bar. 
When I open a new dolphin it works again for a short period of time.
What I tried: 
1. added follwing to /etc/ssh/ssh.config
Host *
 ServerAliveInterval 2

2. in kde system settings - connection I deactived the passive mode as described here:
http://www.binarytides.com/active-ftp-mode-dolphin-konqueror-kde/





Reproducible: Always
Comment 1 Matt 2016-05-12 16:13:53 UTC
I just tested it with Konqueror, and it works fine there. Back to dolphin no access after few seconds.
Comment 2 Per Pomsel 2016-06-07 05:32:56 UTC
I can confirm the described behaviour (using KDE 16.04.1 with Gentoo).
Comment 3 Per Pomsel 2016-08-19 06:38:13 UTC
Is there any progress with this bug?
Comment 4 Toralf Förster 2016-10-09 16:00:19 UTC
whilst https://git.reviewboard.kde.org/r/129134/diff/1#index_header solves a big fraction of this issue there's still 1 thing left:

A right click onto a file and "Copy to..." to a previously remembered destination still doesn't work.
Comment 5 Emmanuel Pescosta 2016-10-09 16:04:11 UTC
(In reply to Toralf Förster from comment #4)
> whilst https://git.reviewboard.kde.org/r/129134/diff/1#index_header solves a
> big fraction of this issue there's still 1 thing left:

Thanks for testing!

> A right click onto a file and "Copy to..." to a previously remembered
> destination still doesn't work.

I think this is a different bug. Can you please open a new one and provide all the information you have, so that we can reproduce it? Thanks!
Comment 6 Toralf Förster 2016-10-09 19:50:10 UTC
created bug #370370
Comment 7 Toralf Förster 2016-11-16 09:19:59 UTC
(In reply to Toralf Förster from comment #4)
> https://git.reviewboard.kde.org/r/129134/diff/1#index_header

had to apply this to 16.08.3 again - so it is not in mainline currently, right ?
Comment 8 Erec 2016-11-17 00:34:15 UTC
I just tested in Tumbleweed a couple of days ago (OpenSuSE's rolling version) and the problem of four clicks before "Loading... " freeze per window per non-cached entry (a place you haven't visited in your previous three clicks) does not exist.
Comment 9 EMR_Kde 2016-12-03 02:18:22 UTC
I have double confirmed that in 16.08.3-1.1 (x86_64) works just as expected after two years with no configuration changes in ~/.ssh/config done! YAY! :) I haven't checked more than 10 non-cached clicks yet. Hopefully the fix is infinite.
Comment 10 Toralf Förster 2017-01-19 10:21:11 UTC
(In reply to Toralf Förster from comment #7)
> (In reply to Toralf Förster from comment #4)
> > https://git.reviewboard.kde.org/r/129134/diff/1#index_header
> 
> had to apply this to 16.08.3 again - so it is not in mainline currently,
> right ?

in 16.12 it wasn't needed, but after upgrading to kde framework 5.30.1 I had to re-apply the patch to the package kio-extras at this Gentoo Linux again.
Comment 11 Erec 2017-02-16 14:29:28 UTC
This has been a bug for years, and recently, I noticed it went away, but now it's back. After four (new, non-cached) clicks in an SFTP connection, the file browser hangs as "Loading...". It's not a KIO thing because the same does NOT happen when using the file chooser dialog with an SFTP URL in Kwrite, or Kate, etc.
Comment 12 Toralf Förster 2017-03-18 10:13:29 UTC
(In reply to Elmo R from comment #11)
> This has been a bug for years, and recently, I noticed it went away, but now
> it's back. After four (new, non-cached) clicks in an SFTP connection, the
> file browser hangs as "Loading...". It's not a KIO thing because the same
> does NOT happen when using the file chooser dialog with an SFTP URL in
> Kwrite, or Kate, etc.

+1 :-/
Comment 13 Erec 2017-10-24 21:44:58 UTC
Bump, this is still a problem.

Name        : dolphin
Version     : 17.08.1
Release     : 1.1
Architecture: x86_64
Install Date: Fri Sep 15 20:28:35 2017
Group       : Productivity/File utilities
Size        : 1457373
License     : GPL-2.0+
Signature   : RSA/SHA256, Tue Sep 12 14:56:39 2017, Key ID b88b2fd43dbdc284
Source RPM  : dolphin-17.08.1-1.1.src.rpm
Build Date  : Thu Sep  7 08:00:00 2017
Build Host  : localhost
Relocations : (not relocatable)
Packager    : https://bugs.opensuse.org
Vendor      : openSUSE
URL         : http://www.kde.org
Summary     : KDE File Manager
Comment 14 Harald Sitter 2018-09-21 13:14:25 UTC
Git commit d572d72ac19c762cbcbdfb190db68f92dc3273a6 by Harald Sitter, on behalf of Andreas Schneider.
Committed on 21/09/2018 at 12:34.
Pushed by sitter into branch 'master'.

[sftp] always emit finished on completion

slaves should always emit an error or finished upon completion

applies to special, open, read, write, seek, get, put, copy, mkdir

(code slightly rejiggered by Harald Sitter <sitter@kde.org>)

M  +31   -27   sftp/kio_sftp.cpp

https://commits.kde.org/kio-extras/d572d72ac19c762cbcbdfb190db68f92dc3273a6
Comment 15 Harald Sitter 2018-10-24 14:08:27 UTC
Git commit 6cee891d1b1b679555cb6745c5b398f81235f8dd by Harald Sitter, on behalf of Andreas Schneider.
Committed on 24/10/2018 at 13:54.
Pushed by sitter into branch 'master'.

[sftp] Use Q_ASSERT in sftpProtocol::reportError()

Signed-off-by: Andreas Schneider <asn@cryptomilk.org>

M  +3    -2    sftp/kio_sftp.cpp

https://commits.kde.org/kio-extras/6cee891d1b1b679555cb6745c5b398f81235f8dd
Comment 16 Germano Massullo (Thetra) 2019-02-20 10:55:49 UTC
*** Bug 366638 has been marked as a duplicate of this bug. ***