[sftp] Use Q_ASSERT in sftpProtocol::reportError()

BUG: 362988

Signed-off-by: Andreas Schneider <asn@cryptomilk.org>